#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([clocktests], [1], [jonathan.c.beard@gmail.com])
AC_CONFIG_SRCDIR([testclock.cpp])
#AC_CONFIG_HEADERS([config.])

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T
AC_TYPE_UINT64_T

# Checks for library functions.
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
